feat: fix methop get the first value